@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rtpict.1,v 1.9 2022/03/16 00:06:08 greg Exp $"
+.\" RCSid "$Id: rtpict.1,v 1.10 2022/04/10 03:46:27 greg Exp $"
 .TH RTPICT 1 3/19/2018 RADIANCE
 .SH NAME
 rtpict - generate a RADIANCE picture or layered image using rtrace
@@ -112,22 +112,23 @@ rtpict -n 8 -vf fish.vf @render.opt -ovLn fisholay scene.oct
 .SH NOTES
 Users should seriously consider using
 .I rpiece(1)
+for multiprocessing
 when irradiance caching is employed with a shared ambient file.
 If
 .I rtpict
-is used in multiprocessing mode with a shared irradiance cache,
-it is trying to compute almost
-the same part of the same scanline in different processes, which
-results in many redundant calculations.
-The
-.I rpiece
-program avoids this by working on separate tiles in each
-process, with less overlap in the indirect irradiance calculation.
-Either program will benefit from an "overture" run of a
-single-process rpict to create the ambient file using a low-resolution
-rendering that is discarded, but this will not completely solve the
-problem for
-.I rtpict.
+is used with
+.I \-n
+greater than 1, it tries to compute neighboring parts
+of the same scanline in different processes, which can
+result in many redundant calculations and cache entries.
+.I Rtpict
+will automatically run a randomly-ordered overture calculation
+to mitigate this problem, but it is not a perfect solution.
+.I Rpiece
+avoids redundant cache calculations by working on separate tiles in each
+process, which brings other benefits as well, such as enabling the
+.I \-ps
+option for image plane sampling.
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
